WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184107
WKWebViewContentProvider shouldn't be a UIScrollViewDelegate
https://bugs.webkit.org/show_bug.cgi?id=184107
Summary
WKWebViewContentProvider shouldn't be a UIScrollViewDelegate
Dean Jackson
Reported
2018-03-28 12:34:56 PDT
WKWebViewContentProvider shouldn't be a UIScrollViewDelegate
Attachments
Patch
(4.05 KB, patch)
2018-03-28 12:38 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
Patch
(4.18 KB, patch)
2018-03-28 12:43 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
Patch
(4.84 KB, patch)
2018-03-28 12:53 PDT
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-03-28 12:35:28 PDT
<
rdar://problem/38967492
>
Dean Jackson
Comment 2
2018-03-28 12:38:48 PDT
Created
attachment 336694
[details]
Patch
Tim Horton
Comment 3
2018-03-28 12:40:28 PDT
Comment on
attachment 336694
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=336694&action=review
> Source/WebKit/UIProcess/Cocoa/WKWebViewContentProvider.h:45 > @protocol WKWebViewContentProvider <NSObject, UIScrollViewDelegate>
‽‽‽ still a UIScrollViewDelegate
Tim Horton
Comment 4
2018-03-28 12:43:03 PDT
Comment on
attachment 336694
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=336694&action=review
> Source/WebKit/UIProcess/Cocoa/WKWebViewContentProvider.h:47 > - (instancetype)web_initWithFrame:(CGRect) frame webView:(WKWebView *)webView;
It’s a little weirder now that the forwarding of scrollViewDidScroll is magical. Probably should be web_scrollViewDidScroll and just be a normal part of the WKWebViewContentProvider protocol.
Dean Jackson
Comment 5
2018-03-28 12:43:42 PDT
Created
attachment 336695
[details]
Patch
Dean Jackson
Comment 6
2018-03-28 12:53:55 PDT
Created
attachment 336700
[details]
Patch
Dean Jackson
Comment 7
2018-03-28 13:12:04 PDT
Committed
r230041
: <
https://trac.webkit.org/changeset/230041
>
mitz
Comment 8
2018-03-28 13:24:05 PDT
Comment on
attachment 336700
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=336700&action=review
> Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:2432 > + [_customContentView web_scrollViewDidScroll:(UIScrollView *)scrollView];
Why was the cast needed? Is it still needed?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug