Source/WebKit/UIProcess/Cocoa/WKWebViewContentProvider.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2014 Apple Inc. All rights reserved.
+ * Copyright (C) 2014, 2018 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -37,12 +37,10 @@
 @class UIView;
 @class WKWebView;
 @protocol NSObject;
-@protocol UIScrollViewDelegate;
 struct CGSize;
 struct UIEdgeInsets;
 
-// FIXME: This should be API (and probably should not be a UIScrollViewDelegate).
-@protocol WKWebViewContentProvider <NSObject, UIScrollViewDelegate>
+@protocol WKWebViewContentProvider <NSObject>
 
 - (instancetype)web_initWithFrame:(CGRect) frame webView:(WKWebView *)webView;
 - (void)web_setContentProviderData:(NSData *)data suggestedFilename:(NSString *)filename;
@@ -54,6 +52,9 @@ struct UIEdgeInsets;
 - (void)web_countStringMatches:(NSString *)string options:(_WKFindOptions)options maxCount:(NSUInteger)maxCount;
 - (void)web_findString:(NSString *)string options:(_WKFindOptions)options maxCount:(NSUInteger)maxCount;
 - (void)web_hideFindUI;
+
+@optional
+- (void)web_scrollViewDidScroll:(UIScrollView *)scrollView;
 
 @end
 
